Se termino la app de gestor de contraseñas

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,7 @@
         <activity android:name="UI.Login"/>
         <activity android:name="UI.Register"/>
         <activity android:name="UI.Home"/>
+        <activity android:name="UI.SecurityDetailsActivity"/>
         <activity
             android:name=".MainActivity"
             android:exported="true">
